Fixes SVG height on mobile devices

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -90,6 +90,7 @@ a:active {
 }
 svg.PNW {
     width:100%;
+    height: 100%;
     border-radius: 50%;
 }
 @-webkit-keyframes color-change {
