--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -83,6 +83,7 @@ a:active {
 }
 svg.PNW {
     width:100%;
+    height: 100%;
     border-radius: 50%;
 }
 @keyframes color-change {
